--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,489 @@
-.App {
-  text-align: center;
+/*Start style*/
+a{
+    text-decoration: none;
+    color: #000;
+}
+.still{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 89vh;
+    width: 100%;
+    flex-direction: row;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.block{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 100px;
+    transition: 0.6s;
+    border-radius: 25px;
+    margin: 0 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.block:hover{
+    cursor: pointer;
+    width: 200px;
+    height: 130px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.blockA{
+    background: #00A19D;
 }
 
-.App-link {
-  color: #61dafb;
+.blockB{
+    background: #FFB319;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.outer{
+    height: 8vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+.name-space{
+    display: flex;
+    width: 25%;
+}
+
+.name-space>img{
+    position: relative;
+    top: 16px;
+    margin: 0 10px;
+}
+
+.star-holder{
+    position: relative;
+    top: 35px;
+    margin: 0 25px;
+}
+.star{
+    width: 35px;
+    height: 2px;
+    background: #FFB319;
+}
+
+.image1{
+    width: 150px;
+    height: 150px;
+    background-image: url("./Application/Assets/display_picture.jpeg");
+    background-repeat: no-repeat;
+    background-size: 150px 190px;
+    background-position: center;
+    border-radius: 75px;
+    border: none; 
+    margin: 15px 30px 0 10px;
+}
+
+.image2{
+    width: 150px;
+    height: 150px;
+    background-image: url("./Application/Assets/display_picture.jpeg");
+    background-repeat: no-repeat;
+    background-size: 150px 190px;
+    background-position: center;
+    border-radius: 75px;
+    border: none; 
+    margin: 15px 30px 0 10px;
+}
+
+.nav-bar{
+    height: 100%;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    margin: 0 20px 0 0;
+    transition: 0.6;
+}
+
+.link{
+    width: 20%;
+    height: 60%;
+    border-radius: 25px;
+    margin: 0 2.5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000;
+}
+
+.link1:hover{
+    border: solid 1px #FFB319;
+}
+
+.link1:active{
+    background: #FFB319;
+}
+
+.link2:hover{
+    border: solid 1px #00A19D;
+}
+
+.link2:active{
+    background: #00A19D;
+}
+
+
+
+.line1{
+    transform: rotate(0deg) ;
+}
+.line2{
+    transform: rotate(90deg) ;
+}
+.line3{
+    position: relative;
+    top: -4px;
+    transform: rotate(45deg) ;
+}
+.line4{
+    position: relative;
+    top: -5px;
+    transform: rotate(135deg) ;
+}
+
+/*Home Set*/
+.transition{
+    transition: 1s;
+}
+.home-main{
+    width: 500px;
+    height: 400px;
+    position: relative;
+    left: 10%;
+    padding: 20px;
+    color: #fff;
+    border-radius: 25px;
+    left: -10px
+}
+
+.main1{
+    height: 92vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.block1{
+    width: 400px;
+    height: 90px;
+    border-radius: 25px;
+    margin: -15px 0 90px 70px;
+    padding: 0 0 0 30px;
+    transition: 0.6s;
+    color: #fff;
+}
+
+.block1>p{
+    font-size: 16px;
+    width: 70%;
+    transition: 0.6s;
+    margin: -10px 0 0 0;
+}
+
+.block1>.inner{
+    height: 55%;
+    display: flex;
+    align-items: center;
+    top: 25px;
+    position: relative;
+    transition: 0.6s;
+}
+
+.block1:hover{
+    height: 140px;
+    margin: 0 0 15px 70px;
+    cursor: pointer;
+}
+.block1:hover>.inner{
+    top: 5px;
+}
+
+.side-set{
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+}
+
+.block2{
+    width: 90%;
+    height: 35vh;
+    border-radius: 25px;
+    margin: 0 0 65px 0;
+}
+
+.with_projects{
+    font-size: 25px;
+    color: #fff;
+    width: 300px;
+    height: 100px;
+    position: fixed;
+    border-radius: 25px;
+    right: 50px;
+    bottom: 25px;
+    padding: 0 0 0 20px;
+    border: solid 1px #fff;
+}
+.with_projects>h5{
+    margin: 8px 0 10px 10px;
+}
+
+.with_projects>button{
+    border: none;
+    border-radius: 25px;
+    font-size: 20px;
+    position: relative;
+    left: 60%;
+    bottom: 15px;
+    width: 70px;
+    height: 30px;
+    color: #FFB319;
+}
+
+.with_projects>button:hover{
+    background: #FFB319;
+    color: #fff;
+    border: solid 1px #fff;
+    cursor: pointer;
+}
+
+.without_projects{
+    color: #fff;
+    width: 700px;
+    height: 300px;
+    position: fixed;
+    border-radius: 25px;
+    left: 50px
+}
+.without_projects>h5{
+    font-size: 25px;
+    margin: 15px 0 10px 20px;
+}
+
+.without_projects>p{
+    width: 80%;
+    font-size: 23px;
+    margin: 25px 0 10px 45px;
+}
+
+.without_projects>button{
+    border: none;
+    border-radius: 25px;
+    font-size: 20px;
+    position: relative;
+    left: 75%;
+    top: 35%;
+    width: 150px;
+    height: 30px;
+    color: #FFB319; 
+    transition: 1.5s;
+}
+
+.without_projects>button:hover{
+    background: #FFB319;
+    color: #fff;
+    border: solid 1px #fff;
+    cursor: pointer;
+}
+
+.backdrop{
+    background: rgba(0,0,0,0.4);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+}
+
+.backdrop>h1{
+    position: relative;
+    left: -40%;
+}
+
+.email-box{
+    position: fixed;
+    top: 15%;
+    left: 45%;
+    background: #FFB319;
+    width: 30%;
+    height: 400px;
+    border-radius: 25px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.info-box{
+    position: fixed;
+    top: 15%;
+    left: 30%;
+    background: #FFB319;
+    width: 40%;
+    height: 400px;
+    border-radius: 25px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.menu-box{
+    position: fixed;
+    top: 15%;
+    left: 15%;
+    background: #00A19D;
+    width: 30%;
+    height: 400px;
+    border-radius: 25px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.input{
+    width: 70%;
+    height: 35px;
+    border-radius: 25px;
+    margin: 10px 0;
+    border: none;
+    padding: 0 12px;
+}
+
+.switch{
+    display: flex;
+    border: solid 1px #fff;
+    border-radius: 25px;
+    width: 200px;
+    height: 25px;
+    align-items: center;
+    justify-content: center;
+}
+
+.on{
+    transition: 0.6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 25px;
+    background: #fff;
+    border-radius: 25px;
+    color: #FFB319;
+}
+
+.off{
+    transition: 0.6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 25px;
+    border-radius: 25px;
+}
+
+.button{
+    background: #fff;
+    border-radius: 25px;
+    width: 70px;
+    height: 30px;
+    border: none;
+    color:#FFB319;
+    transition: 1.5s;
+}
+
+.button:hover{
+    background: #FFB319;
+    color:#fff;
+    border: solid 1px #fff;
+    cursor: pointer;
+
+}
+
+.signin{
+    position: relative;
+    top: 40%;
+    left: -75%
+}
+.signup {
+    position: relative;
+    top: 50%;
+    left: 30%;
+}
+.cv-box{
+    background-color: #fff;
+    width: 90%;
+    height: auto;
+    border: solid 2px #FFB319;
+    border-radius: 25px;
+    padding-bottom: 100px;
+    margin-left: 5%;
+}
+
+.cv-header{
+    display: flex;
+    margin-top: 30px;
+}
+
+.cv-header-imagery{
+    margin-left: 5%;
+}
+
+.cv-header-txt{
+    margin-left: 5%;
+}
+
+.cv-programming{
+    width: 80%;
+    margin: 100px 0 0 8%;
+    border-radius: 25px;
+    background: #00A19D;
+    padding: 50px 2.5%;
+}
+
+li>h4,h5,p{
+    margin: -5px 0 -5px 0;
+}
+
+.contacts{
+    width: 60%;
+    height: 500px;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.pills{
+    width: 150px;
+    height: 40px;
+    border-radius: 150%;
+    border: none;
+}
+
+.pills:hover{
+    cursor: pointer;
+}
+
+.pill-box{
+    display: flex;
+    position: relative;
+    top: 150px;
+    width: 80%;
+    justify-content: space-between;
 }
